--- a/part3_ggplot/part3_workbook.Rmd
+++ b/part3_ggplot/part3_workbook.Rmd
@@ -36,32 +36,32 @@ Let's load in an Excel file derived from a public dataset on water quality measu
 https://www.kaggle.com/datasets/shreyanshverma27/water-quality-testing
 
 ```{r}
-data <- read_xlsx("part3_ggplot/Water_Quality.xlsx")
+water <- read_xlsx("part3_ggplot/Water_Quality.xlsx")
 ```
 
 # Mapping dataframe columns to plot aesthetics
 
-We'll put the measure pH level on the x-axis and the amount of dissolved oxygen on the y-axis
+We'll put the measured pH level on the x-axis and the amount of dissolved oxygen on the y-axis
 
 ```{r}
-myPlot <- ggplot(data, aes(x = pH, y = Oxygen))
-myPlot
+waterPlot <- ggplot(water, aes(x = pH, y = Oxygen))
+waterPlot
 ```
 
-*Note that when the plot is rendered, no data points are shown yet because we have not defined the exact type of plot yet*
+*Note that when the plot is rendered, no data points are shown because we have not defined the exact type of plot yet*
 
 # Visualising data points - geom\_\*()
 
 Let's start by showing the data as points (i.e. a scatter plot)
 
 ```{r}
-myPlot + geom_point()
+waterPlot + geom_point()
 ```
 
 We can use the same ggplot object to show the data as a line chart
 
 ```{r}
-myPlot + geom_line()
+waterPlot + geom_line()
 ```
 
 
@@ -70,92 +70,92 @@ myPlot + geom_line()
 We'll be working with a dataset that comes with R called `iris` which has a record of several plant characteristics for different iris species
 
 ```{r}
-myData <- iris
-glimpse(myData)
+flowers <- iris
+glimpse(flowers)
 ```
 
 #### Make a scatter plot (points) of the petal length vs the width
 
 ```{r}
-myPlot <- ggplot(myData, aes(x = Petal.Length, y = Petal.Width)) + 
+flowersPlot <- ggplot(flowers, aes(x = Petal.Length, y = Petal.Width)) + 
   geom_point()
-myPlot
+flowersPlot
 ```
 
 #### Turn the same plot into a line chart
 
 ```{r}
-myPlot <- ggplot(myData, aes(x = Petal.Length, y = Petal.Width)) + 
+flowersPlot <- ggplot(flowers, aes(x = Petal.Length, y = Petal.Width)) + 
   geom_line()
-myPlot
+flowersPlot
 ```
 
 *Although it renders, why is this not a good chart type for this data?*
 
 #Static vs data-driven attributes
 
-Depending on the data we have and what we want to visualise, we can have either set some attributes for the whole plot or have them be driven by the data.
+Depending on the data we have and what we want to visualise, we can either specify plot style attributes for the whole plot or have them be driven by the data.
 
 ## Global / static attribute
 
 Change the size of the points in the plot
 ```{r}
-myPlot <- ggplot(data, aes(x = pH, y = Oxygen)) +
+waterPlot <- ggplot(water, aes(x = pH, y = Oxygen)) +
   geom_point(size = 2)
-myPlot
+waterPlot
 ```
 _Defining an attribute outside of the aes() function in the geom function will set it for all the data points_
 
 ## Data driven point size
 
-Change the size based on the water tempature
+Change the size based on the water temperature
 ```{r}
-myPlot <- ggplot(data, aes(x = pH, y = Oxygen, size = Temp)) +
+waterPlot <- ggplot(water, aes(x = pH, y = Oxygen, size = Temp)) +
   geom_point()
-myPlot
+waterPlot
 ```
-_Not that the size of the point is now defined by the value of n_actions and a legend appears_
+_Note that the size of the point is now defined by the value of n_actions and a legend appears_
 
 ### Try it yourself
 
 #### Continue from the last iris scatter plot and colour all the points blue
 ```{r}
-ggplot(myData, aes(x = Petal.Length, y = Petal.Width)) + 
+ggplot(flowers, aes(x = Petal.Length, y = Petal.Width)) + 
   geom_point(color = "blue")
 ```
 _You can either provide the name of the colour like "blue" or a hex value like "#1273ed"_
 
-#### Now change this so that each species had a different colour
+#### Now change this so that each species has a different colour
 ```{r}
-ggplot(myData, aes(x = Petal.Length, y = Petal.Width, colour = Species)) + 
+ggplot(flowers, aes(x = Petal.Length, y = Petal.Width, colour = Species)) + 
   geom_point()
 ```
 _ggplot will automatically generate colours for different species names_
 
 ## Plot layout
 
-### Add axis labels and title
+### Add axis labels and title - `labs()`
 ```{r}
-myPlot <- ggplot(data, aes(x = pH, y = Oxygen, size = Temp)) +
+waterPlot <- ggplot(water, aes(x = pH, y = Oxygen, size = Temp)) +
   geom_point() +
   labs(x = "Water pH", 
        y = "Dissolved Oxygen (mg/L)", 
        title = "Effect of water pH on oxygenation"
        )
-myPlot
+waterPlot
 ```
 _Add axis labels and a title to the plot_
 
-### Change theme
+### Change theme - `theme()`
 ```{r}
-myPlot <- ggplot(data, aes(x = pH, y = Oxygen, size = Temp)) +
+waterPlot <- ggplot(water, aes(x = pH, y = Oxygen, size = Temp)) +
   geom_point() +
   labs(x = "Water pH", 
        y = "Dissolved Oxygen (mg/L)", 
        title = "Effect of water pH on oxygenation"
        ) +
   theme_bw()
-myPlot
+waterPlot
 ```
 _Use a built-in black and white theme_
 
@@ -167,14 +167,14 @@ _Use a built-in black and white theme_
 - x label: Petal length (cm)
 - y label: Petal width (cm)
 ```{r}
-ggplot(myData, aes(x = Petal.Length, y = Petal.Width, colour = Species)) + 
+ggplot(flowers, aes(x = Petal.Length, y = Petal.Width, colour = Species)) + 
   geom_point() + labs(x = "Petal length (cm)", y = "Petal width (cm)", 
                       title = "Iris petal length and width comparison for different species")
 ```
 
 #### Now add built-in minimal theme to the plot `theme_minimal()` 
 ```{r}
-ggplot(myData, aes(x = Petal.Length, y = Petal.Width, colour = Species)) + 
+ggplot(flowers, aes(x = Petal.Length, y = Petal.Width, colour = Species)) + 
   geom_point() + labs(
     x = "Petal length", 
     y = "Petal width",
@@ -183,21 +183,23 @@ ggplot(myData, aes(x = Petal.Length, y = Petal.Width, colour = Species)) +
 
 ## Bar charts
 
-When creating bar charts with ggplot you have to summarise the data first
+When creating bar charts with ggplot you have to summarise the data first if 
+needed so it contains the position and height of each bar.
 
 ### Data summary
 ```{r}
-sumData <- data |>
+sumData <- water |>
   group_by(pH) |>
   summarise(Oxygen = mean(Oxygen)) |> 
   ungroup()
+glimpse(sumData)
 ```
 
 ### Now plot the bar graph
 ```{r}
-myPlot <- ggplot(sumData, aes(x = pH, y = Oxygen)) +
+waterPlot <- ggplot(sumData, aes(x = pH, y = Oxygen)) +
   geom_bar(stat = "identity")
-myPlot
+waterPlot
 ```
 _`stat = "identity"` should always be set when you are creating bar charts where you summarised the data per bar already_
 
@@ -206,9 +208,9 @@ _`stat = "identity"` should always be set when you are creating bar charts where
 #### Summarise the iris data so you have the average `mean()` petal length per species
 
 ```{r}
-sumData <- myData |> 
-  group_by(Species) %>% 
-  summarise(avgPetalLength = mean(Petal.Length)) %>% 
+sumData <- flowers |> 
+  group_by(Species) |> 
+  summarise(avgPetalLength = mean(Petal.Length)) |> 
   ungroup()
 ```
 
@@ -228,28 +230,29 @@ ggplot(sumData, aes(x = avgPetalLength, y = Species)) +
 
 Once you are happy with your result, you can save the plot as an image.
 ```{r}
-myPlot <- ggplot(data, aes(x = pH, y = Oxygen, color = Conductivity)) +
+waterPlot <- ggplot(water, aes(x = pH, y = Oxygen, color = Conductivity)) +
   geom_point(size = 2) +
   labs(x = "Water pH", 
        y = "Dissolved Oxygen (mg/L)", 
        title = "Effect of water pH on oxygenation"
        ) +
   theme_bw()
-myPlot
+waterPlot
 
-ggsave(filename = "oxygenation.png", plot = myPlot, width = 1800, height = 900, units = "px")
+ggsave(filename = "oxygenation.png", plot = flowersPlot, width = 1800, height = 900, units = "px")
 ```
 
 ## Bringing it all together
 
-Let's look at a wine tasting experiment. Experts rated red wines on a ten point scale. In addition specific wine properties were measured. Let's evlaute some of the result visually.
+Let's look at a wine tasting experiment. Experts rated red wines on a ten point scale. In addition specific wine properties were measured. Let's evaluat some of the result visually.
 
-https://www.kaggle.com/datasets/shilongzhuang/red-and-white-wine-quality
+source: https://www.kaggle.com/datasets/shilongzhuang/red-and-white-wine-quality
 
-#### Load the `winequality-red.csv` dataset using the built-in `read.csv()` function into a new variable called `wine`.
+#### Load the `winequality-red.csv` dataset using the built-in `read.csv()` function into a new variable called `wine` and explore the dataset.
 
 ```{r}
 wine <- read.csv("part3_ggplot/winequality-red.csv")
+glimpse(wine)
 ```
 _Note that this data is not stored as an XLSX file but a CSV file_
 
@@ -265,7 +268,7 @@ _Note that this data is not stored as an XLSX file but a CSV file_
 
 ```{r}
 
-winePlot <- ggplot(wine, aes(x = fixed.acidity, y = density, colour = alcohol)) + 
+ggplot(wine, aes(x = fixed.acidity, y = density, colour = alcohol)) + 
   geom_point(size = 1.2) + theme_light()
 
 ```
@@ -273,9 +276,9 @@ winePlot <- ggplot(wine, aes(x = fixed.acidity, y = density, colour = alcohol)) 
 #### Now summarise the data so that you get the average `mean()` sulphates concentration per quality level and save this to a new varliable `sulQual`
 ```{r}
 
-sulQual <- myData %>% 
-  group_by(quality) %>% 
-  summarise(sulphates = mean(sulphates)) %>% 
+sulQual <- wine |> 
+  group_by(quality) |> 
+  summarise(sulphates = mean(sulphates)) |> 
   ungroup()
 
 ```
@@ -293,5 +296,102 @@ sulQualPlot
 ggsave(filename = "wine_sulfate_quality.png",plot =sulQualPlot, width = 550, height = 1150, units = "px")
 ```
 
+## EXTRA - More ggplot functions
 
+Below are some examples of more useful ggplot functions you can explore
 
+### Specify colours
+
+When setting `colour` in the `aes()` function, ggplot will use a default set of
+colours. You can change this by providing your own colour scale
+
+```{r}
+flowers <- iris
+flowersPlot <- ggplot(flowers, aes(x = Petal.Length, y = Petal.Width, colour = Species)) + 
+  geom_point() + theme_minimal() +
+  # Use a discrete set of colours
+  scale_colour_discrete(
+    name = "Iris species",
+    type = c(setosa = "orange", versicolor = "#72BD13", virginica = "purple"))
+  
+flowersPlot
+```
+_Colours when there are a discrete set of possibilities_
+
+```{r}
+flowers <- iris
+flowersPlot <- ggplot(flowers, 
+                 aes(x = Petal.Length, y = Petal.Width, colour = Sepal.Length)) + 
+  geom_point() + theme_minimal() +
+  # Use a colour gradient
+  scale_colour_gradientn(
+    name = "Sepal Length",
+    colours = c("#132B43", "#72BD13", "#ED553B")
+  )
+  
+flowersPlot
+```
+_Set colours across a whole range of numbers (number of colours provided here are equally spaced between min and max)_
+
+## Add text labels
+
+You can add text labels instead of points with `geom_text`
+```{r}
+flowersPlot <- ggplot(flowers, aes(x = Petal.Length, y = Petal.Width, 
+                             label = Species)) + 
+  theme_minimal() +
+  geom_text(check_overlap = TRUE)
+  
+flowersPlot
+```
+_You can set `check_overlap = TRUE` to clean up overlapping text. You can also change to `geom_label()` if you want the labels to have a background colour_
+
+## Add trend line
+
+You a trend line to a set of points with `geom_smooth()`
+```{r}
+flowersPlot <- ggplot(flowers, aes(x = Petal.Length, y = Petal.Width)) + 
+  geom_point() + theme_minimal() +
+  geom_smooth(method = "lm", se = FALSE, colour = "#72BD13")
+  
+flowersPlot
+```
+_The `method` here is set to a linear model "lm", and standard deviation `se` is hidden_
+
+### Try it yourself
+
+#### Improve the colour scheme of the waterPlot so low conductivity is blue and high is red
+
+```{r}
+waterPlot <- ggplot(water, aes(x = pH, y = Oxygen, color = Conductivity)) +
+  geom_point(size = 2) +
+  labs(x = "Water pH", 
+       y = "Dissolved Oxygen (mg/L)", 
+       title = "Effect of water pH on oxygenation"
+       ) +
+  theme_bw() +
+  scale_colour_gradientn(
+    colours = c("#0044FF", "#ED553B")
+  )
+
+waterPlot
+
+```
+
+#### Now add a trend line to the plot
+```{r}
+waterPlot <- ggplot(water, aes(x = pH, y = Oxygen, color = Conductivity)) +
+  geom_point(size = 2) +
+  labs(x = "Water pH", 
+       y = "Dissolved Oxygen (mg/L)", 
+       title = "Effect of water pH on oxygenation"
+       ) +
+  theme_bw() +
+  scale_colour_gradientn(
+    colours = c("#0044FF", "#ED553B")
+  ) + 
+  geom_smooth(method = "lm", se = FALSE, colour = "#72BD13")
+
+waterPlot
+
+```
